# tetris

./: .gitignore  README.md  TODOs.txt  TetrisEnv.py  main_py  pyproject.toml  requirements.txt
.github/workflows/: formatting_and_linting.yml  unittests.yml
docs/: Solutions_rightmost_occupied_col_per_row.docx
docs/Solutions_rightmost_occupied_col_per_row/: solutions_rightmost_occupied_col_per_row.py
src/tetris/: TetrisEnv.py  main.py  tetris_env.py  tetris_env_domain_specific_exceptions.py
tests/: test_tetris_env.py
